--- a/FreeCodeCamp-Frontend/Projects/Drum-Machine/style.css
+++ b/FreeCodeCamp-Frontend/Projects/Drum-Machine/style.css
@@ -45,11 +45,12 @@ body {
 #display {
   flex-basis: 30%;
   height: inherit;
+  text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
   background: linear-gradient(to top, rgb(237, 150, 113), rgb(239, 101, 244));
-  font-size: 1.5rem;
+  font-size: 1.4rem;
 }
 
 .drum-pad:active {
