completed the design of javascript calculator

--- a/FreeCodeCamp-Frontend/Projects/Javascript-Calculator/css/style.css
+++ b/FreeCodeCamp-Frontend/Projects/Javascript-Calculator/css/style.css
@@ -68,6 +68,28 @@ body {
       border-bottom: 1px solid #0004;
       border-top: 1px solid #0009; }
 
+#clear {
+  background: #f6185f;
+  grid-column: span 2; }
+  #clear::before {
+    background: linear-gradient(90deg, #f3306e, #f16491);
+    border-left: 1px solid #fff4;
+    border-bottom: 1px solid #fff4;
+    border-top: 1px solid #fff4; }
+
+#equals {
+  background: #318bf2;
+  height: auto;
+  grid-row: span 2; }
+  #equals::before {
+    background: linear-gradient(90deg, #358df2, #6bb2f0);
+    border-left: 1px solid #fff4;
+    border-bottom: 1px solid #fff4;
+    border-top: 1px solid #fff4; }
+
+#zero {
+  grid-column: span 2; }
+
 @media (hover: hover) {
   button {
     cursor: pointer; } }
