completed the calculator project

--- a/FreeCodeCamp-Frontend/Projects/Javascript-Calculator/css/style.css
+++ b/FreeCodeCamp-Frontend/Projects/Javascript-Calculator/css/style.css
@@ -6,7 +6,7 @@
   font-family: "Poppins", sans-serif; }
 
 body {
-  background: radial-gradient(circle, #323131, #373838);
+  background: radial-gradient(circle, #313030, #393b3b);
   min-height: 100vh;
   color: #fff;
   display: flex;
